[project]
name = "airtest"
version = "1.3.5.666999"
description = "airtest1.3.5魔改版"
authors = [
    {name = "iori",email = "371803085@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "Jinja2 (>=2.8)",
    "Pillow (>=3.4.0)",
    "requests (>=2.11.1)",
    "six (>=1.9.0,<=1.16.0)",
    "mss (==6.1.0)",
    "numpy (<2.0.0)",
    "opencv-contrib-python (>=4.4.0.46, <=4.6.0.66)",
    "pandas (>=1.0.5)",
    "facebook-wda (>=1.3.3)",
    "filelock",
    "ffmpeg-python",
    "tidevice",
    "pywinauto (>=0.6.3)",
    "psutil",
    "toml (>=0.10.2,<0.11.0)"
 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.scripts]
rqalpha = "rqalpha.__main__:entry_point"
